logo sizing fix on mobile

--- a/site/static/base.css
+++ b/site/static/base.css
@@ -126,7 +126,8 @@ p, ul {
 		display: block;
 		float: none;
 		margin: auto;
-		max-width: 100%;
+		width: 100%;
+		max-width: 500px;
 		height: auto;
 	}
 	.header-nav {
